--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <div style="margin-top: 10px" class="container-fluid">
         <div class="row">
-            <div style="margin-left: 50px margin-right: 50px" class='col-sm-12 col-md-8'>
+            <div class='col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-1'>
                 <div class="row">
                     <div id="block1">
                     </div>
@@ -35,7 +35,7 @@
                 <div id="long2" class="row">
                 </div>
             </div>
-            <div class='hidden-sm col-md-3'>
+            <div class='hidden-sm col-md-2'>
                 <div id="sideBar">
                 </div>
             </div>
